--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" >
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="assets/copy-icon.png">
 
     <title>EC Prompter</title>
 </head>
@@ -18,8 +19,11 @@
                 <nav>
                     <ul id="tabs-list"></ul>
                     <button id="add-tab-btn">+</button>
-                    <button id="copy-line-up">Copy Line Up</button>
-                </nav>
+                    <div id="button-div">
+                        <button class="port-button">Export</button>
+                        <button class="port-button">Import</button>
+                    </div> 
+                </nav> 
             </div>
         </header>
         <main class="main-content">
