--- a/prompter/content.html
+++ b/prompter/content.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="icon.png" type="image/x-icon">
+    <link rel="icon" type="image/png" href="../assets/copy-icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -41,6 +41,8 @@
                         <tr><td>7</td><td>7x Speed</td></tr>
                         <tr><td>8</td><td>8x Speed</td></tr>
                         <tr><td>9</td><td>9x Speed</td></tr>
+                        <tr><td>NumpadPlus</td><td>Add Speed</td></tr>
+                        <tr><td>NumpadMinus</td><td>Decrease Speed</td></tr>
                         <tr><td>0</td><td>Pause</td></tr>
                     </table>
                 </div>
