--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" >
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="assets/copy-icon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
 
     <title>EC Prompter</title>
 </head>
@@ -22,8 +22,8 @@
                     <div id="button-div">
                         <button class="port-button">Export</button>
                         <button class="port-button">Import</button>
-                    </div> 
-                </nav> 
+                    </div>
+                </nav>
             </div>
         </header>
         <main class="main-content">
@@ -33,6 +33,7 @@
             <section class="tab-content" id="tab-content"></section>
         </main>
     </div>
-    <script src="scripts.js"></script>
+    <script src="js/index.js"></script>
 </body>
+
 </html>
