--- a/prompter.html
+++ b/prompter.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../assets/copy-icon.png">
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/prompter.css">
 </head>
 <body>
     <div class="container-fluid prompterCon" id="bgPrompter">
@@ -50,6 +50,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/prompter.js"></script>
 </body>
 </html>
