feat: prompter width add to session storage

--- a/prompter.html
+++ b/prompter.html
@@ -32,6 +32,8 @@
                         <tr><td>=</td><td>Increase Text Padding</td></tr>
                         <tr><td>Arrow Up</td><td>Manual Scroll Up</td></tr>
                         <tr><td>Arrow Down</td><td>Manual Scroll Down</td></tr>
+                        <tr><td>Arrow Left</td><td>Previous Prompt</td></tr>
+                        <tr><td>Arrow Right</td><td>Next Prompt</td></tr>
                         <tr><td>1</td><td>1x Speed</td></tr>
                         <tr><td>2</td><td>2x Speed</td></tr>
                         <tr><td>3</td><td>3x Speed</td></tr>
