bug: page not loading at certain situations

--- a/prompter.html
+++ b/prompter.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container-fluid prompterCon" id="bgPrompter">
-        <div class="container" id="prompter-content"></div>
+        <div id="prompter-content"></div>
 
         <div class="card md" id="helpCard">
             <div class="card-body p-5">
