refactor: remove useless css; bug: empty space at start growing

--- a/prompter.html
+++ b/prompter.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/prompter.css">
 </head>
 <body>
-    <div class="container-fluid prompterCon" id="bgPrompter">
+    <div class="prompterCon" id="bgPrompter">
         <div id="prompter-content"></div>
 
         <div class="card md" id="helpCard">
