feat: clipboard replace to download file

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <ul id="tabs-list"></ul>
                     <button id="add-tab-btn" title="Add new tab">+</button>
                     <div id="button-div">
-                        <button class="port-button" onclick="exportLineup()" title="Export tab to Clipboard">Export</button>
-                        <button class="port-button" onclick="importLineup()" title="Import Clipboard to tab">Import</button>
+                        <button class="port-button" id="export-btn" onclick="exportLineup()" title="Export tab to Clipboard">Export</button>
+                        <button class="port-button" id="import-btn" onclick="importLineup()" title="Import Clipboard to tab">Import</button>
                     </div>
                 </nav>
             </div>
