--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
             </header>
             <section class="tab-content" id="tab-content"></section>
         </main>
+        <footer class="footer">
+            <div class="footer-content">
+                <p>&copy; MCGI Production EDSA Caloocan. Intended for God's works.</p>
+                <p style="color: gray;">Jeremias 9:24</p>
+                <ul class="social-links">
+                    <!-- <li><a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://www.twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li> -->
+                    <li><a href="https://github.com/edsclcn" target="_blank" aria-label="github"><i class="fa-brands fa-github"></i></a></li>
+                </ul>
+            </div>
+        </footer>
     </div>
     <script src="js/index.js"></script>
     <script src="js/port.js"></script>
