feat: text formatting

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </div>
     <script src="js/index.js"></script>
     <script src="js/port.js"></script>
+    <script src="js/textformatting.js"></script>
 </body>
 
 </html>
