chore: font and ui change

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <ul id="tabs-list"></ul>
                     <button id="add-tab-btn" title="Add new tab">+</button>
                     <div id="button-div">
-                        <button class="port-button" id="export-btn" onclick="exportLineup()" title="Export tab to Clipboard">Export</button>
-                        <button class="port-button" id="import-btn" onclick="importLineup()" title="Import Clipboard to tab">Import</button>
+                        <button class="port-button" id="export-btn" onclick="exportLineup()" title="Export tab to Clipboard"><i class="fa-solid fa-download"></i></button>
+                        <button class="port-button" id="import-btn" onclick="importLineup()" title="Import Clipboard to tab"><i class="fa-solid fa-upload"></i></button>
                     </div>
                 </nav>
             </div>
@@ -31,7 +31,7 @@
         </main>
         <footer class="footer">
             <div class="footer-content">
-                <p>&copy; MCGI Production EDSA Caloocan. Intended for God's works.</p>
+                <p>&copy; MCGI Productions EDSA Caloocan. Intended for God's works.</p>
                 <p style="color: gray;">Jeremias 9:24</p>
                 <ul class="social-links">
                     <li><a href="https://github.com/edsclcn" target="_blank" aria-label="github"><i class="fa-brands fa-github"></i></a></li>
