feat: csv, file names

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <ul id="tabs-list"></ul>
                     <button id="add-tab-btn" title="Add new tab">+</button>
                     <div id="button-div">
+                        <button class="port-button" id="csv-btn" onclick="exportCSV()" title="Export titles to CSV"><i class="fa-solid fa-file-csv"></i></button>
                         <button class="port-button" id="export-btn" onclick="exportLineup()" title="Export tab to Clipboard"><i class="fa-solid fa-download"></i></button>
                         <button class="port-button" id="import-btn" onclick="importLineup()" title="Import Clipboard to tab"><i class="fa-solid fa-upload"></i></button>
                     </div>
