(EC-1) fet: image prompt initial

--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
             <div class="navbar-content">
                 <h2 id="name">EC Prompter</h2>
                 <nav>
+                    <button id="image-btn"><i class="fa-solid fa-image"></i></button>
                     <ul id="tabs-list"></ul>
                     <button id="add-tab-btn" title="Add new tab">+</button>
                     <div id="button-div">
-                        <button class="port-button" id="csv-btn" onclick="exportCSV()" title="Export titles to CSV"><i class="fa-solid fa-file-csv"></i></button>
-                        <button class="port-button" id="export-btn" onclick="exportLineup()" title="Export tab to Clipboard"><i class="fa-solid fa-download"></i></button>
-                        <button class="port-button" id="import-btn" onclick="importLineup()" title="Import Clipboard to tab"><i class="fa-solid fa-upload"></i></button>
+                        <button class="port-button" id="csv-btn" onclick="exportCSV()" title="Export titles to CSV"><i
+                                class="fa-solid fa-file-csv"></i></button>
+                        <button class="port-button" id="export-btn" onclick="exportLineup()"
+                            title="Export tab to Clipboard"><i class="fa-solid fa-download"></i></button>
+                        <button class="port-button" id="import-btn" onclick="importLineup()"
+                            title="Import Clipboard to tab"><i class="fa-solid fa-upload"></i></button>
                     </div>
                 </nav>
             </div>
@@ -35,11 +39,17 @@
                 <p>&copy; MCGI Productions EDSA Caloocan. Intended for God's works.</p>
                 <p style="color: gray;">Jeremias 9:24</p>
                 <ul class="social-links">
-                    <li><a href="https://github.com/edsclcn" target="_blank" aria-label="github"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="https://github.com/edsclcn" target="_blank" aria-label="github"><i
+                                class="fa-brands fa-github"></i></a></li>
                 </ul>
             </div>
         </footer>
     </div>
+    <script>
+        document.getElementById('image-btn').addEventListener('click', function () {
+            window.open('image.html', '_blank');
+        });
+    </script>
     <script src="js/index.js"></script>
     <script src="js/port.js"></script>
     <script src="js/textformatting.js"></script>
